--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,3 +1,5 @@
+# Python Version 3.11.14
+
 audioread==3.1.0
 certifi==2025.10.5
 cffi==2.0.0
@@ -24,5 +26,4 @@ soundfile==0.13.1
 soxr==1.0.0
 threadpoolctl==3.6.0
 typing_extensions==4.15.0
-urllib3==2.5.0
-wxPython==4.2.4
+urllib3==2.5.0 wxPython==4.2.4
