--- a/requirements2.txt
+++ b/requirements2.txt
@@ -26,4 +26,5 @@ soundfile==0.13.1
 soxr==1.0.0
 threadpoolctl==3.6.0
 typing_extensions==4.15.0
-urllib3==2.5.0 wxPython==4.2.4
+urllib3==2.5.0 
+wxPython==4.2.4
